# romea-ros2-gps

./: .gitlab-ci.yml  AUTHORS  README.md  romea_gps.repos  romea_gps.repos.public  romea_gps.rosinstall  romea_gps_public.repos
romea_gps/: CMakeLists.txt  package.xml
romea_gps_bringup/: CMakeLists.txt  README.md  package.xml
romea_gps_bringup/launch/: ashtech_proflex800.launch  drotek_fp9.launch  gps.launch.py  gps_driver.launch.py  ublox_evk_m8.launch
romea_gps_bringup/launch/common/: gps_common.launch  gps_nmea_driver.launch
romea_gps_bringup/launch/drivers/: nmea_navsat_driver.launch.py  ntrip_client.launch.py  romea_gps_driver.launch.py  romea_ublox.launch.py  romea_ublox_driver.launch.py
romea_gps_bringup/launch/simulation/: gazebo_bridge.launch.py
romea_gps_bringup/python/: gps_bringup.py  romea_gps_bringup.py
romea_gps_bringup/script/: make_xacro.py
romea_gps_bringup/scripts/: urdf_description.py
romea_gps_bringup/test/: test_gps_bringup.py  test_gps_bringup.yaml  test_urdf_description.py
romea_gps_description/: CMakeLists.txt  README.md  package.xml
romea_gps_description/config/: drotek_f9p_eure.yaml  thales_zmax_eure.yaml  thales_zmax_specifications.yaml  ublox_evk_m8_specifications.yaml
romea_gps_description/python/: gps_description.py  romea_gps_description.py
romea_gps_description/test/: test_gps_bringup.yaml  test_gps_description.py
romea_gps_description/urdf/: ashtech_proflex800.xacro.urdf  drotek_f9p.xacro.urdf  gps.simulation.xacro  gps.xacro  gps.xacro.urdf
romea_gps_driver/: CMakeLists.txt  README.md  package.xml  romea_gps_driver.repos
romea_gps_driver/include/romea_gps_driver/: gps_serial_driver.hpp  gps_tcp_driver.hpp  visibility_control.h
romea_gps_driver/src/: gps_serial_driver.cpp  gps_tcp_driver.cpp
romea_gps_gazebo/: CMakeLists.txt  README.md  package.xml
romea_gps_gazebo/include/romea_gps_gazebo/: gazebo_ros_gps_sensor.hpp
romea_gps_gazebo/src/: gazebo_ros_gps_sensor.cpp
romea_gps_gazebo/test/: CMakeLists.txt  test_gazebo_ros_gps_sensor.cpp  test_gazebo_ros_gps_sensor.world
romea_gps_gazebo_classic/: CMakeLists.txt  README.md  package.xml
romea_gps_gazebo_classic/src/: gazebo_ros_gps_sensor.cpp
romea_gps_gazebo_classic/test/: test_gazebo_ros_gps_sensor.cpp  test_gazebo_ros_gps_sensor.world
romea_gps_ntrip/: CMakeLists.txt  README.md  package.xml
romea_gps_ntrip/launch/: centipede_tcp.launch.py
romea_gps_ntrip/romea_gps_ntrip/: ntrip_client.py  ntrip_node.py  ntrip_str.py
romea_gps_ntrip/scripts/: serial_nmea_ntrip  tcp_nmea_ntrip
romea_gps_utils/: CMakeLists.txt  README.md  package.xml
romea_gps_utils/include/romea_gps_utils/: gps_data.hpp  gps_data_conversions.hpp  gps_data_diagnostics.hpp  gps_parameters.hpp  gps_serial_interface.hpp  gps_tcp_interface.hpp  tcp_client.hpp
romea_gps_utils/src/: gps_data.cpp  gps_data_conversions.cpp  gps_data_diagnostics.cpp  gps_parameters.cpp  gps_serial_interface.cpp  gps_tcp_interface.cpp  tcp_client.cpp
romea_gps_utils/test/: CMakeLists.txt  test_data_conversions.cpp  test_parameters.cpp  test_parameters.yaml
