<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_gps</name>
  <version>0.0.0</version>
  <description>Romea gps metapackage</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>BSD</license>

  <author>Jean Laneurit</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>romea_gps_bringup</exec_depend>
  <exec_depend>romea_gps_description</exec_depend>
<!--  <exec_depend>romea_nmea_gps_driver</exec_depend>-->
  <exec_depend>romea_gps_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
